PAGE CONTAINER/ALIGNMENT FIXED. Shopping cart image added.

--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ h3 {
 }
 
 #container {
-    margin-left: 300px;
-    margin-right: 300px;
+    margin: auto;
+    width:1200px;
 }
 
 #logo {
